--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -1,13 +1,22 @@
 name: Update Weather Calendar
 
 on:
-  schedule:
-    - cron: "30 5 * * *"   # 07:30 ישראל
   workflow_dispatch:
+    inputs:
+      BOOTSTRAP_HISTORY:
+        description: "Run 3-month history bootstrap"
+        required: false
+        default: "false"
+
+  schedule:
+    - cron: "30 7 * * *"
+
 
 jobs:
   update:
     runs-on: ubuntu-latest
+        env:
+          BOOTSTRAP_HISTORY: ${{ github.event.inputs.BOOTSTRAP_HISTORY }}
     steps:
       - uses: actions/checkout@v3
       - name: Run update
