--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       BOOTSTRAP_HISTORY:
-        description: "Run 3-month history bootstrap"
+        description: "Run history bootstrap (true = backfill)"
         required: false
         default: "false"
 
@@ -14,16 +14,33 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
+
     env:
       BOOTSTRAP_HISTORY: ${{ github.event.inputs.BOOTSTRAP_HISTORY }}
+
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout repo
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v5
+        with:
+          python-version: "3.11"
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install requests
 
       - name: Configure git
         run: |
           git config user.name "weather-bot"
           git config user.email "bot@weather.local"
 
-      - name: Run update
+      - name: Run update script
         run: |
           python update_weather.py
+
+      - name: Show git status (debug)
+        run: |
+          git status
