--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       BOOTSTRAP_HISTORY:
-        description: "Run history bootstrap (true = backfill)"
+        description: "Run 3-month history bootstrap"
         required: false
         default: "false"
 
@@ -14,22 +14,19 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-
     env:
       BOOTSTRAP_HISTORY: ${{ github.event.inputs.BOOTSTRAP_HISTORY }}
 
     steps:
-      - name: Checkout repo
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install requests
 
       - name: Configure git
@@ -37,10 +34,6 @@ jobs:
           git config user.name "weather-bot"
           git config user.email "bot@weather.local"
 
-      - name: Run update script
+      - name: Run update
         run: |
           python update_weather.py
-
-      - name: Show git status (debug)
-        run: |
-          git status
