--- a/.github/workflows/daily.yml
+++ b/.github/workflows/daily.yml
@@ -14,21 +14,18 @@ on:
 jobs:
   update:
     runs-on: ubuntu-latest
-
     env:
       BOOTSTRAP_HISTORY: ${{ github.event.inputs.BOOTSTRAP_HISTORY }}
 
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/setup-python@v4
         with:
           python-version: "3.11"
 
       - name: Install dependencies
         run: |
-          python -m pip install --upgrade pip
           pip install requests
 
       - name: Configure git
